builder design pattern

--- a/design-pattern/creational/2. singleton-design-pattern.ipynb
+++ b/design-pattern/creational/2. singleton-design-pattern.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "id": "f2056866-8fd7-46ca-aeb0-e5314070ae36",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "249b5a68-52af-408c-b827-6ac8adc15f52",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "2bf288df-586d-4e78-8d02-192ed1ce1ccb",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "5b6c501e-d571-4458-a372-f0971bbdb4d9",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "a17f2695-a185-49ee-8465-bc69de1315a8",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "a03bccac-05ee-4fda-9448-62b00c11e331",
    "metadata": {},
    "outputs": [],
@@ -233,17 +233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "id": "e9f28659-b78f-4a04-8014-c2a9bc90f79a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<SingletonEnum.INSTANCE: <__main__.Singleton object at 0x13d40a680>>"
+       "<SingletonEnum.INSTANCE: <__main__.Singleton object at 0x1185c8ee0>>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "id": "7599c575-dd33-46af-8562-2b9669dd52f2",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "id": "20f9791f-9478-4fdb-b859-24f80cc7e0e1",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "id": "091ee5d4-d126-412f-80aa-05d127af2158",
    "metadata": {},
    "outputs": [],
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 34,
    "id": "472c3761-729f-43ab-a655-17918f163d36",
    "metadata": {},
    "outputs": [],
