decorator design pattern

--- a/design-pattern/structural/1. adapter-design-pattern.ipynb
+++ b/design-pattern/structural/1. adapter-design-pattern.ipynb
@@ -218,8 +218,16 @@
    "id": "169a5c61-f98a-42f6-a788-72ea80c8d584",
    "metadata": {},
    "source": [
-    "The **Adapter Patter** is incredibly useful for integrating incredible interface, enabling systems to work together without modfying existing code. By \"adapting\" one interface to another, you can seemlessly add new feature, libraries or system into your application. Whether dealing with"
+    "The **Adapter Patter** is incredibly useful for integrating incredible interface, enabling systems to work together without modfying existing code. By \"adapting\" one interface to another, you can seemlessly add new feature, libraries or system into your application. Whether dealing with legacy code, external services, file format or UI components, the adapter pattern provides an elegant solution to bridging the gapo between incompatible systems."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dda192f-5320-4722-bef4-2ef4165f3854",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
