composite design pattern

--- a/design-pattern/structural/3. facade-design-pattern.ipynb
+++ b/design-pattern/structural/3. facade-design-pattern.ipynb
@@ -151,8 +151,16 @@
    "id": "39c4cd19-4c07-4238-b543-a6449d941f99",
    "metadata": {},
    "source": [
-    "The **Facade Pattern** simplifies complex systems by providing a unified and easy-to-use interface to a set of systems. It abstracts away the complexity, reducing the number of interactionand making "
+    "The **Facade Pattern** simplifies complex systems by providing a unified and easy-to-use interface to a set of systems. It abstracts away the complexity, reducing the number of interactionand making it easier for client to interact with the system. The **Facade** pattern is a great choice for managing complexity and improving usability."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe5c23e7-db69-436a-8687-e41ef4183f2f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
