observer design pattern

--- a/design-pattern/structural/4. composite-design-pattern.ipynb
+++ b/design-pattern/structural/4. composite-design-pattern.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f90f15fa-fa4e-4288-a04f-6d08457c9a12",
    "metadata": {},
    "outputs": [],
@@ -49,8 +49,16 @@
     "    def display(self):\n",
     "        print(f\"Directory: {self.name}\")\n",
     "        for child in self.children:\n",
-    "            child."
+    "            child.display()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5129d6b-b714-4e8b-bcca-e432453e3fe5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
